fix: word-wrap overflow

--- a/assets/styles/typography.sass
+++ b/assets/styles/typography.sass
@@ -33,11 +33,12 @@ body
   font-size: 17px
   font-size: calc(19px + (22 - 19) * ((100vw - 700px) / (1400 - 700)))
 
-h1, h2, h3, h4, p
-  overflow-wrap: normal
-  word-wrap: normal
-  word-break: normal
-  hyphens: normal
+h1, h2, h3, h4, p, a, em, strong, .markdown
+  word-wrap: break-word
+  overflow-wrap: break-word
+  word-break: break-all
+  word-break: break-word
+  hyphens: auto
 
 li, h1, h2, h3, h4, p, a, a:link, a:visited, a:hover, a:active, span, input, button
   font-family: 'DINBk', Helvetica, Arial, sans-serif
